fix text wrap

--- a/packages/bpk-component-navigation-tab-group/src/BpkNavigationTabGroup.module.scss
+++ b/packages/bpk-component-navigation-tab-group/src/BpkNavigationTabGroup.module.scss
@@ -23,6 +23,7 @@
   display: flex;
   align-items: center;
   text-decoration: none;
+  white-space: nowrap;
 }
 
 .bpk-navigation-tab-group {
